--- a/client/settings.html
+++ b/client/settings.html
@@ -143,9 +143,14 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="/res/jquery-1.11.1.js"></script>
-  <script src="/current.js"></script>
   <script src="/config.static.js"></script>
   <script type="text/javascript">
+    let config;
+    $.getJSON('/current.json', function (data) {
+      config = data;
+      fillIn();
+    });
+
     function fillInRecursive(prefix, config) {
       for (let property in config) {
         let source = $('#' + prefix + property);
@@ -199,7 +204,7 @@
       config = putInConfigRecursive('', config);
     }
 
-    fillIn();
+
     document.title = constants.name;
     var socket = io();
 
