--- a/client/download.html
+++ b/client/download.html
@@ -18,10 +18,11 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="/res/jquery-1.11.1.js"></script>
-  <script src="/config.static.js"></script>
   <script type="text/javascript">
     var fileList;
-    document.title = constants.name;
+    $.getJSON('/config.static.json', function (data) {
+      document.title = data.name;
+    });
     var socket = io();
 
     let config;
