--- a/client/settings.html
+++ b/client/settings.html
@@ -143,12 +143,15 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="/res/jquery-1.11.1.js"></script>
-  <script src="/config.static.js"></script>
   <script type="text/javascript">
-    let config;
+    let config, constants;
     $.getJSON('/current.json', function (data) {
       config = data;
-      fillIn();
+      $.getJSON('/config.static.json', function (data) {
+        constants = data;
+        document.title = constants.name;
+        fillIn();
+      });
     });
 
     function fillInRecursive(prefix, config) {
@@ -205,7 +208,7 @@
     }
 
 
-    document.title = constants.name;
+
     var socket = io();
 
     function setDate() {
